<resources>
    <string name="app_name">玩Android</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">发现</string>
    <string name="title_notifications">我的</string>
    <string name="str_tree">知识体系</string>
    <string name="action_favorites">收藏</string>
    <string name="action_browser">用浏览器打开</string>
    <string name="str_search">搜索</string>
    <string name="str_collect">我的收藏</string>


    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_again_password">Again password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_password_same">Inconsistent entry password</string>
    <string name="str_hint_register">还未注册，前去注册</string>
    <string name="str_sign_complete">已登录</string>
    <string name="str_night_mode">夜间模式</string>
    <string name="action_project_link">项目地址</string>
    <string name="str_hint_login">已有账号去登录</string>
    <string name="title_system">知识体系</string>
    <string name="title_project">项目</string>
    <string name="title_publicnumber">公众号</string>
    <string name="str_not_more_data">(⊙﹏⊙) 到底了没有更多数据了</string>
    <string name="str_search_hint">输入你要搜索的内容</string>
    <string name="str_logout">登出</string>
    <string name="str_logout_done">退出成功</string>
    <string name="navigation_drawer_open">打开</string>
    <string name="navigation_drawer_close">关闭</string>
    <string name="nav_header_subtitle">Developed by suming</string>
    <string name="nav_favorites">收藏</string>
    <string name="nav_mode">夜间模式</string>
    <string name="communicate">Communicate</string>
    <string name="nav_share">分享</string>
    <string name="nav_settings">设置</string>
    <string name="nav_logout">退出</string>
    <string name="action_cancel">取消</string>
</resources>
