<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_favorites" />

        <item
            android:id="@+id/nav_theme_mode"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_mode" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
        </menu>
    </item>

</menu>
