<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="localuser"
            type="com.whamu2.wanandroid.mvp.model.bean.User" />

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingTop="4dp"
                android:paddingEnd="15dp"
                android:paddingBottom="4dp">

                <com.whamu2.commonview.library.CircleImageView
                    android:id="@+id/head"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:onClick="@{listener}"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="2dp" />

                <Space
                    android:layout_width="15dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="@{localuser.username}"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:text="@string/app_name" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="6dp" />

                    <TextView
                        android:id="@+id/label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="@{localuser.username == null?`未登录`:`已登录`}"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal"
                        tools:text="@string/app_name" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/divider"
                android:orientation="vertical"
                android:showDividers="middle|beginning|end">

                <TextView
                    android:id="@+id/collect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                    android:gravity="center_vertical"
                    android:onClick="@{listener}"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="10dp"
                    android:text="@string/str_collect"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>


        </LinearLayout>

        <com.coorchice.library.SuperTextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:onClick="@{listener}"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/str_logout"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:corner="24dp"
            app:solid="@color/colorAccent" />
    </FrameLayout>
</layout>